MetricConversion/styles.css
.main {
    text-align: center;
    font-family: "Open Sans", sans-serif;
    margin: 0;
}

.head {
    margin: 0;
    padding: 20px;
    width: 100%;
    display: flex;
    flex-direction: column;  
    height: 400px;
    justify-content: space-around;
    margin-bottom: 40px;
    background-color: blueviolet;
    align-items: center;
}

.head h1 {
    color: white;
    font-size: 40px;
    margin: 0;
}


.head button {
    padding: 10px 20px;
    font-size: 16px;
    font-weight: bold;
    color: rgb(72, 70, 70);
    background-color: rgb(239, 223, 223);
    border: none;
    border-radius: 5px;
    cursor: pointer;
}


.input {
    margin: 20px;
    padding: 10px;
    height: 70px;
    width: 100px;
    font-size: 50px;
    border-radius: 5px;
    border: 1px solid #ccc;
}

.some {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 50px 40px;
    width: 90%;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    background-color: rgb(221, 221, 221);
    margin: 40px auto;  
}

